Fix styles and layout break in ChannelDetail

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -10,6 +10,7 @@ $body-text-grey: #99aab5;
 $channels-grey: #8e9297;
 $message-header-grey: hsla(0,0%,100%,.2);
 $message-body-white: #dcddde;
+$members-header-grey: hsla(0, 0%, 100%, .4);
 
 // Background colors
 $black: #202225;
