--- a/app/assets/stylesheets/components/_server_detail.scss
+++ b/app/assets/stylesheets/components/_server_detail.scss
@@ -60,6 +60,8 @@
   flex-direction: column;
   // width: 100%;
   // box-sizing: border-box;
+
+  overflow-y: auto;
 }
 
 .serverDetail-categoriesSection {
